src/objects/Auction_Item_Piece__c.object
<CustomObject>
    <description>It&apos;s the junction table to map Donated Items to Auction Items.</description>
    <fields>
        <fullName>Actual_FMV__c</fullName>
        <description>workflow rule sets this automatically from the calculated field Estimated FMV.  This is so the master object, Auction Item, can have a Rollup Summary field on Actual FMV.  (Salesforce didn&apos;t allow the Rollup Summary field on Estimated FMV, because it uses a cross object formula).</description>
        <inlineHelpText>The actual Fair Market Value to use.</inlineHelpText>
        <label>Actual FMV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auction_Donated_Item_Name__c</fullName>
        <formula>Opportunity__r.Auction_Donated_Item_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Donated Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Item__c</fullName>
        <label>Auction Item</label>
        <referenceTo>Auction_Item__c</referenceTo>
        <relationshipLabel>Auction Item Pieces</relationshipLabel>
        <relationshipName>Auction_Item_Pieces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_FMV__c</fullName>
        <formula>(Opportunity__r.Amount / Opportunity__r.Number_of_Items__c ) * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculated fair market value based on the value of the opportunity and the number of items.</inlineHelpText>
        <label>Estimated FMV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Auction Item Pieces</relationshipLabel>
        <relationshipName>Auction_Item_Pieces</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>how many of these pieces are included</inlineHelpText>
        <label>Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Auction Item Piece</label>
    <nameField>
        <displayFormat>AIP-{0000}</displayFormat>
        <label>Piece ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auction Item Pieces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>